--- a/application.properties
+++ b/application.properties
@@ -18,6 +18,7 @@ spring.rabbitmq.password=guest
 rabbit.host=${spring.rabbitmq.host}
 rabbit.username=guest
 rabbit.password=guest
+rabbit.message-ttl=60000
 
 #################################################################
 ## MongoDB config
