--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8001}
-message = Hello!
+message = Hello Jakov!
 
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = RegistrationHandlers
