--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8001}
-message = Hello Jakove, kako si?
+message = Hello Jakove, kako si, kolko je sati?
 
 
 # define the destination to which the input MessageChannel should be bound
