--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8001}
-message = Diplomski projekt je uspio?
+message = Dobar dan, kako ste?
 
 
 # define the destination to which the input MessageChannel should be bound
