--- a/application.properties
+++ b/application.properties
@@ -174,6 +174,8 @@ rabbit.queue.federation.get_federation_history=symbIoTe.federation.get_federatio
 rabbit.exchange.trust.name=symbIoTe.trust
 rabbit.exchange.trust.type=topic
 rabbit.exchange.trust.durable=false
+
+
 rabbit.exchange.trust.autodelete=false
 rabbit.exchange.trust.internal=false
 
@@ -205,3 +207,4 @@ rabbit.exchange.sla.autodelete=false
 rabbit.exchange.sla.internal=false
 
 rabbit.routingKey.sla.violation=federation.sla.violation
+message = Dobar dan, kako ste 123456?
