--- a/AuthenticationAuthorizationManager.properties
+++ b/AuthenticationAuthorizationManager.properties
@@ -26,3 +26,4 @@ aam.deployment.validation.allow-offline= true
 
 # required to properly run as PAAM
 spring.profiles.active=platform
+message = Dobar dan!
