--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8001}
-message = Dobar dan, kako ste 12345?
+message = Dobar dan, kako ste?
 
 
 # define the destination to which the input MessageChannel should be bound
