--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,7 +1,6 @@
 server.port=${PORT:8001}
 message = Dobar dan, kako ste? Odlicno,Vi?
-
-
+spring.devtools.restart.trigger-file:/Users/Jakov/Desktop/Diplomski_projekt/CloudConfigProperties-master/RegistrationHandler.properties
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = RegistrationHandlers
 
