--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8001}
-message = Dobar dan, kako ste? Odlicno,Vi?
+message = Dobar dan, kako ste? Odlicno,Vi 123?
 spring.devtools.restart.trigger-file:/Users/Jakov/Desktop/Diplomski_projekt/CloudConfigProperties-master/RegistrationHandler.properties
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = RegistrationHandlers
