--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,6 +1,6 @@
 server.port=${PORT:8001}
-message = Dobar dan, kako ste? Odlicno,Vi 123?
-spring.devtools.restart.trigger-file:/Users/Jakov/Desktop/Diplomski_projekt/CloudConfigProperties-master/RegistrationHandler.properties
+message = Dobar dan, kako ste? Odlicno,Vi?
+
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = RegistrationHandlers
 
