--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,5 +1,6 @@
 server.port=${PORT:8001}
 message = Dobar dan, kako ste? Odlicno,Vi?
+management.security.enabled=false
 
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = RegistrationHandlers
