--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,6 +1,7 @@
 server.port=${PORT:8001}
 message = Dobar dan, kako ste? Odlicno,Vi?
 management.security.enabled=false
+endpoints.restart.enabled=true
 
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = RegistrationHandlers
