--- a/application.properties
+++ b/application.properties
@@ -11,7 +11,7 @@ platform.id=diplpro
 ## AMQP config
 #################################################################
 
-spring.rabbitmq.host=localhostttt
+spring.rabbitmq.host=localhosttt
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
