--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8001}
-message = Dobar dan, kako ste? Odlicno,Vi?
+message = Dobar dan, kako ste? Odlicno,Vi? također
 management.security.enabled=false
 management.endpoint.restart.enabled=true
-#spring.devtools.restart.trigger-file = /Users/Jakov/Desktop/Diplomski_projekt/CloudConfigProperties-master/application.properties
+
 
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = RegistrationHandlers
