--- a/application.properties
+++ b/application.properties
@@ -11,7 +11,7 @@ platform.id=diplpro
 ## AMQP config
 #################################################################
 
-spring.rabbitmq.host=localhostttt
+spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
@@ -207,4 +207,4 @@ rabbit.exchange.sla.autodelete=false
 rabbit.exchange.sla.internal=false
 
 rabbit.routingKey.sla.violation=federation.sla.violation
-message = Dobar dan, kako ste 123456?
+message = Dobar dan, kako ste? okej
