--- a/AuthenticationAuthorizationManager.properties
+++ b/AuthenticationAuthorizationManager.properties
@@ -26,4 +26,4 @@ aam.deployment.validation.allow-offline= true
 
 # required to properly run as PAAM
 spring.profiles.active=platform
-message = Dobar dan!
+message = Dobar dan! Kako je?
