--- a/RegistrationHandler.properties
+++ b/RegistrationHandler.properties
@@ -1,5 +1,5 @@
 server.port=${PORT:8001}
-message = Dobar dan, kako ste? Odlicno,Vi? također
+message = Dobar dan, kako ste? Odlicno,Vi? također 123
 management.security.enabled=false
 management.endpoint.restart.enabled=true
 
